navbar overlaping problem solved

--- a/style.css
+++ b/style.css
@@ -1,38 +1,57 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-size: 100%;
+    font-family: sans-serif;
+}
 .navbar{
-    background-color: rgb(50, 50, 70);
-    border-radius: 10px;
+    position: fixed;
+    background-color: rgb(70, 70, 85);
+    width: 100%;
+    height: 8vh;
+    z-index: 2;
 }
 .navbar ul{
     overflow: auto;
+    text-align: center;
 }
 .navbar li{
-    float:left;
+    display: inline-block;
     list-style: none;
-    margin: 25px 20px;
+    margin: 1.6vh .8vh;
 }
 .navbar li a{
-    background-color: rgb(70, 70, 70);
-    padding: 9px 5px;
+    padding: .8vh .5vh;
     border: 1px solid white;
-    border-radius: .7rem;
     text-decoration: none;
-    text-align: center;
+    /* text-align: center; */
     color: white;
-    font-family: monospace;
-    font-size: 1.5em;
+    font-size: 1.7em;
 }
 .navbar li a:hover{
     background-color: rgb(90, 90, 110);
-    border-radius: 10px;
 }
-/* .search{
-    float: right;
+
+#section1{
+    background-image: url("https://images.unsplash.com/photo-1426604966848-d7adac402bff?crop=entropy&cs=srgb&fm=jpg&ixid=M3w0NzYzMDB8MHwxfHNlYXJjaHw0fHxuYXR1cmV8ZW58MHx8fHwxNjkwNzI1MTcyfDA&ixlib=rb-4.0.3&q=85");
+    width: 100%;
+    height: 70vh;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    z-index: 1;
+}
+
+#section1 h1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3em;
     color: white;
-    padding: 23px;
 }
-.navbar input{
-    border: 3px solid black;
-    border-radius: 10px;
-    width: 120px;
-    font-size: 1em;
-} */
+
